# wenboi

./: CMakeLists.txt  GBMemory.cc  GBMemory.h  GBRom.cc  GBRom.h  GBVideo.cc  GBVideo.h  Logger.cc  Logger.h  MBC.cc  MBC.h  MBC1.cc  MBC1.h  Makefile  NoMBC.cc  NoMBC.h  README.md  Singleton.h  disasm.h  gbcore.cc  gbcore.h  gbrom.cc  logger.h  opcodes.h  sized_types.h  util.cc  util.h
common/: Logger.h  Singleton.h  sized_types.h  toString.h
core/: CMakeLists.txt  GBMemory.cc  GBMemory.h  GBRom.cc  GBRom.h  GBVideo.cc  GBVideo.h  GameBoy.cc  GameBoy.h  Instruction.h  MBC.cc  MBC.h  MBC1.cc  MBC1.h  NoMBC.cc  NoMBC.h  disasm_macros.h  opcodes.h  util.cc  util.h
qtboi/: CMakeLists.txt  QtBoiDisassemblyWindow.cc  QtBoiDisassemblyWindow.h  QtBoiEmuThread.cc  QtBoiEmuThread.h  QtBoiMainWindow.cc  QtBoiMainWindow.h  QtBoiStatusWindow.cc  QtBoiStatusWindow.h  qtboi.cc
tests/: test_core.cc
wenboi/: CMakeLists.txt  wenboi.cc
wendi/: CMakeLists.txt  CodeBlock.cc  CodeBlock.h  Instruction.cc  Instruction.h  disasm.cc  disasm.h  disasm_macros.h  disassembly_output.h  output_graph.cc  output_graph.h  output_txt.cc  output_txt.h  wendi.cc
