PROJECT(wenboi)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

IF(CMAKE_COMPILER_IS_GNUCC)
  MESSAGE("Setting warning options")
  SET(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wno-unknown-pragmas")
  SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_C_FLAGS_DEBUG})
ENDIF(CMAKE_COMPILER_IS_GNUCC)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(qtboi)
ADD_SUBDIRECTORY(wendi)

