PROJECT(wenboi)

CMAKE_MINIMUM_REQUIRED(VERSION 3.16.0)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 COMPONENTS Widgets REQUIRED)

message("Using Qt version: ${Qt6_VERSION}")

IF(CMAKE_COMPILER_IS_GNUCC)
  MESSAGE("Setting warning options")
  SET(CMAKE_C_FLAGS_DEBUG "-g -Wall -Wno-unknown-pragmas")
  SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_C_FLAGS_DEBUG})
ENDIF(CMAKE_COMPILER_IS_GNUCC)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(qtboi)
ADD_SUBDIRECTORY(wendi)

